# mcp-pinecone-notes

./: .gitignore  Dockerfile  README.md  app.py  mcp.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  secret-scan.yml
agent/: functions.json  index.yaml  tools.txt
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: lint.py  search.py
src/mcp_pinecone_notes/: __init__.py  main.py
tests/: test_mcp_tools.py
